--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "store",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://denis-andrei.github.io/clothing-store",
   "dependencies": {
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
@@ -14,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,6 +36,7 @@
   },
   "devDependencies": {
     "firebase": "^7.0.0",
+    "gh-pages": "^2.1.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
